# llmops

./: .gitignore  compose.yaml
api/: .env  Dockerfile  main.py  pyproject.toml  startup.sh
api/alembic/: alembic.ini  env.py
api/alembic/versions/: 19fe17fb7a5f_del_arg_schema.py  7e8d072a9e07_init.py  987505374493_tool.py  b3ad3a966f96_restart.py  c324e044e520_tool.py
api/app/: __init__.py
api/app/agent/config/: agent_config.py
api/app/agent/embedding/: embedding.py
api/app/agent/pool/: agent_session_pool.py
api/app/component/: __init__.py
api/app/component/cache/: redis_client.py
api/app/component/config/: pg_hybrid_search_config.py
api/app/component/cos/: cos_client.py
api/app/component/database/: postgres_client.py  qdrant_manager.py
api/app/component/task/: celery_task_client.py
api/app/component/worker/: celery_client.py
api/app/conversation/: conversation_service.py
api/app/dto/oauth/: auth_user_info.py
api/app/dto/tool/: openai_schema.py
api/app/embedding/: embedding.py
api/app/entity/: __init__.py
api/app/entity/model/: model.py
api/app/entity/oauth/: account_info.py
api/app/entity/parent/: base.py
api/app/entity/tool/: tool_entity.py
api/app/entity/vector/: vector_store.py
api/app/repository/account/: account_repository.py
api/app/repository/model/: model_repository.py
api/app/repository/session/: session_repository.py
api/app/repository/tool/: api_tool_repository.py
api/app/request/conversation/: conversation.py
api/app/request/file/: file.py
api/app/request/session/: session_request.py
api/app/request/tool/: tool.py
api/app/router/: __init__.py
api/app/router/file/: file_router.py
api/app/service/: __init__.py
api/app/task/: task.py
api/app/test/: fwaf.py  test.py  test_aaa.py
(+261 files in other folders)
