[project]
name = "llmops"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "celery-types>=0.26.0",
    "cos-python-sdk-v5>=1.9.44",
    "dotenv>=0.9.9",
    "eventlet>=0.41.0",
    "fastapi>=0.136.3",
    "injector>=0.24.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "pathlib>=1.0.1",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]