[project]
name = "llmops"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "celery-types>=0.26.0",
    "chardet>=7.4.3",
    "cos-python-sdk-v5>=1.9.44",
    "dashscope>=1.26.4",
    "dotenv>=0.9.9",
    "eventlet>=0.41.0",
    "fastapi>=0.136.3",
    "injector>=0.24.0",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-postgres>=0.0.17",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "pathlib>=1.0.1",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "typing-extensions>=4.16.0",
    "unstructured[docx,pdf]>=0.24.1",
    "uvicorn>=0.49.0",
]
